--- a/index.html
+++ b/index.html
@@ -4,38 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lesson 22</title>
+    <title>lesson 25</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h1>Задача 1</h1>
-    <button onclick="buttonClick()">Нажми на меня</button>
-    <span id="elem">Это span с текстом.</span> -->
-    <!-- <h1>Задача 2</h1>
-    <button onclick="buttonClick()">Нажми на меня</button>
-    <span id="elem">Это span с текстом.</span> -->
-    <!-- <h1>Задача 3</h1>
-    <h2>Заголовок, не поменяется.</h2>
-    <p>Абзац, поменяется.</p>
-    <p>Абзац, поменяется.</p>
-    <p>Абзац, поменяется.</p>
-    <input type="submit" onclick="func()"> -->
-    <!-- <h1>Задача 4</h1>
-    <h2 class="a">Заголовок с классом a.</h2>
-    <p class="a">Абзац с классом a.</p>
-    <p class="a">Абзац с классом a.</p>
-    <p>Просто абзац, не поменяется.</p>
-    <input type="submit" onclick="func()">  -->
-    <h1>Задача 5</h1>
-    <h2 class="a">Заголовок с классом a, не поменяется.</h2>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>
-    <p class="a">Абзац с текстом</p>   
-    <input type="submit" onclick="func()">
+    <!-- <h1>Задание 1</h1>
+    <img src="img/1.jpg">
+    <img src="img/2.jpg">
+    <img src="img/3.jpg"> -->
+
+    <!-- <h1>Задание 2</h1>
+    <a href="#" title="">Текст первой ссылки</a>
+    <a href="#" title="">Текст второй ссылки</a>
+    <a href="#" title="">Текст третьей ссылки</a> -->
+
+    <!-- <h1>Задание 3</h1>
+    <a href="https://yandex.by/" title="">Текст первой ссылки</a>
+    <a href="https://vk.com/" title="">Текст второй ссылки</a>
+    <a href="http://google.com/" title="">Текст третьей ссылки</a> -->
+    
+    <!-- Домашнее задание -->
+
+    <!-- №1  -->
+    <!-- <input type="text" value="1">
+    <input type="text" value="2">
+    <input type="text" value="3">
+    <p id="test"></p> -->
+
+    <!-- №2 -->
+    <!-- <input type="text" value="1">
+    <input type="text" value="2">
+    <input type="text" value="3"> -->
+
+    <!-- №3 -->
+    <!-- <p>2</p>
+    <p>4</p>
+    <p>6</p> -->
+
+    <!-- №4 -->
+    <input type="text" data-length="4">
+    <input type="text" data-length="7">
+    <input type="text" data-length="9">
+
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
